# py_chat_analyzer

./: .coverage  .gitignore  Justfile  README.md  TODO.md  main.py  pandoc_cfg.yaml  pyproject.toml
ca_chat_nlp/: analysis.py  utils.py
ca_txt2json/: cli.py  digest.py  format.py  main.py
data/: WaChat-AlbertoRdgz.txt  WaChat-Alejandrin.txt  WaChat-BelenNtly.txt  WhatsChat_alsaxzo.txt  original_1.txt  wachat_EstebanArgumedo.txt  wachat_mama.txt
output/: WaChat-AlbertoRdgz.md  WhatsChat_alsaxzo.md  wachat_EstebanArgumedo.md  wachat_EstebanArgumedo.tex  wachat_mama.md
