[tool.poetry]
name = "chat-analyzer"
version = "0.1.0"
description = "A cli-tool to analyze Whatsapp chats"
authors = ["Danyiel Colin <danyiel5978@gmail.com>"]
readme = "README.md"
packages = [
  {include = "ca_txt2json"},
  {include = "ca_chat_nlp"}
]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.ca_txt2json.dependencies]
unidecode = "^1.3.6"
emoji = "^2.2.0"

[tool.poetry.group.ca_chat_nlp.dependencies]
pandas = "^2.0.2"
matplotlib = "^3.7.1"
nltk = "^3.8.1"

[tool.poetry.group.dev.dependencies]
pynvim = "^0.4.3"
ipython = "^8.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
watxt2json = "ca_txt2json.main:main"
