[project]
name = "py-chat-analyzer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "emoji>=2.14.1",
    "unidecode>=1.4.0",
]

[dependency-groups]
dev = [
    "ipython>=9.2.0",
]

[tool.setuptools]
packages = ["ca_txt2json"]
