[project]
name = "py-chat-analyzer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "emoji>=2.14.1",
    "unidecode>=1.4.0",
]

[dependency-groups]
ca-chat-nlp = [
    "kaleido",
    "matplotlib>=3.10.1",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "spacy>=3.8.5",
]
dev = [
    "ipython>=9.2.0",
    "pip>=25.1.1",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
]

[tool.setuptools]
packages = [
  "ca_txt2json",
  "ca_chat_nlp"
]

[tool.uv.sources]
kaleido = { git = "https://github.com/plotly/kaleido", subdirectory = "src/py", rev = "latest-tag" }

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
